<resources>
    <string name="app_name">Handin 2 MOBI1</string>

    <string name="button_about">About</string>
<<<<<<< HEAD
    <string name="button_login">Webview</string>
    <string name="button_register">Register</string>
=======
    <string name="button_login">Login</string>
    <string name="button_email">Send E-mail</string>
>>>>>>> 5e30b74f7008958d80b8eb7807d5ec603c37ee55
    <string name="button_back">Back</string>
    <string name="button_White">White</string>
    <string name="button_Grey">Grey</string>
    <string name="button_Black">Black</string>
    <string name="button_composeEmail">Compose Email</string>

    <string name="selectColor">Select a background color:</string>
    <string name="composeEmail">Press button below to launch&#xA;external e-mail application.</string>
    <string name="action_settings">Settings</string>
    <string name="copyright">MOBI1 Demo Layout</string>

        <string name="abouttext">OnTime Tool is a mobile software solution created by Global Business Engineers
        Ayla Lundorff and Kristoffer Sejer Broedloes. In relation to their specialization in IT and Production Management, this demo-version of
        the  software has been created as part of their final thesis at VIA University College in Horsens, Denmark. </string

    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_aboutactivity">Aboutactivity</string>
    <string name="title_activity_color">ColorActivity</string>
    <string name="title_activity_email">EmailActivity</string>
</resources>
