<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.ayla.handin1mobi1.ColorActivity"
    android:orientation="vertical"
    android:background="#000000">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/t7"
        android:text="@string/button_White"
        android:textSize="18sp"
        android:textColor="#000000"
        android:textStyle="bold"
        android:gravity="center"
        android:padding="7dp"
        android:background="#ffffff"
        />
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/t8"
        android:text="@string/button_Gray"
        android:textSize="18sp"
        android:textColor="#000000"
        android:textStyle="bold"
        android:gravity="center"
        android:padding="7dp"
        android:background="#848482"
        />
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/t9"
        android:text="@string/button_Black"
        android:textSize="18sp"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:gravity="center"
        android:padding="7dp"
        android:background="#2c3539"
        />
    <Button
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:layout_marginTop="270dp"
        android:id="@+id/t4"
        android:text="@string/button_back"
        android:textSize="18sp"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:gravity="center"
        android:padding="7dp"
        android:background="@drawable/borderbottom"/>

</LinearLayout>
